--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,6 +10,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 400;
 
+  h1 {
+    font-weight: 600;
+  }
+
   h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     scroll-margin-top: 66px;
