--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -513,12 +513,12 @@ footer.sticky-bottom {
         transition: all 0.15s ease;
 
         p {
+          font-size: 0.8rem;
           color: var(--global-text-color-light);
           line-height: 1.4em;
           margin: 10px;
         }
         pre {
-          font-size: 1em;
           line-height: 1.4em;
           padding: 10px;
         }
