--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -3,7 +3,8 @@
  ******************************************************************************/
 
 :root {
-  --global-bg-color: #{$white-color};
+  // --global-bg-color: #{$white-color};
+  --global-bg-color: #{rgb(247, 247, 247)};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
@@ -14,7 +15,8 @@
   --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0,0,0,.1);
-  --global-card-bg-color: #{rgba(0,0,0,0.025)};
+  // --global-card-bg-color: #{rgba(0,0,0,0.025)};
+  --global-card-bg-color: #{rgba(233,233,233, 0.5)};
 
   .fa-sun {
     display : none;
