--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,10 @@ p, h1, h2, h3, h4, h5, h6, em, div, li, span, strong {
   color: var(--global-text-color);
 }
 
+p:last-child {
+  margin-bottom: 0 !important;
+}
+
 hr {
   border-top: 1px solid var(--global-divider-color);
 }
