--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -11,7 +11,7 @@
           <div class="col-sm-3">
               {%- if entry.image -%}
               <div class=" teaser">
-                  {% include figure.html path=entry.image class="img-fluid rounded z-depth-1 medium-zoom-image" zoomable=false %}
+                  {% include figure.html path=entry.image class="img-fluid rounded z-depth-1 medium-zoom-image hover" zoomable=false %}
               </div>
               {%- endif -%}
           </div>
