--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -29,6 +29,7 @@
 }
 
 html[data-theme='dark'] {
+  // --global-bg-color: #{$grey-color-dark};
   --global-bg-color: #{$grey-color-dark};
   --global-code-bg-color: #{$code-bg-color-dark};
   --global-text-color: #{$grey-color-light};
