--- a/_includes/header_archieve.html
+++ b/_includes/header_archieve.html
@@ -2,28 +2,36 @@
     <header>
 
       <!-- Nav Bar -->
-      <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
+      <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %} ">
         <div class="container">
-          {% if page.permalink != '/' -%}
-          <a class="navbar-brand title" href="{{ site.baseurl | prepend: site.url }}/">
-              {%- if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}  {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif -%}
-          </a>
-          {%- elsif site.enable_navbar_social -%}
-          <!-- Social Icons -->
-          <div class="navbar-brand social">
-            {% include social.html %}
-          </div>
-          {% endif %}
           <!-- Navbar Toggle -->
-          <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar top-bar"></span>
-            <span class="icon-bar middle-bar"></span>
-            <span class="icon-bar bottom-bar"></span>
+          <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <div>
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar top-bar"></span>
+              <span class="icon-bar middle-bar"></span>
+              <span class="icon-bar bottom-bar"></span>
+            </div>
           </button>
 
-          <div class="collapse navbar-collapse text-right" id="navbarNav">
-            <ul class="navbar-nav ml-auto flex-nowrap">
+          {% if page.permalink != '/' and page.permalink != '/publications/' -%}
+            <section class="nav order-sm-3">
+              <div class="navbar-brand social">
+                {% include social.html %}
+              </div>
+            </section>
+          {%- else -%}
+            {%- if site.last_updated -%}
+            <section class="nav order-sm-3">
+              <div style="color: var(--global-text-color-light) !important; border: 1px solid var(--global-text-color-light); padding-left: 0.5rem; padding-right: 0.5rem; padding-top: 0.2rem; padding-bottom: 0.3rem; top: 8px; left: 16px; border-radius: 1rem;  font-weight: 400; font-size:  0.8em;">
+                Last updated: {{ "now" | date: '%b %d, %Y' }}
+              </div>
+            </section>
+            {%- endif %}
+          {%- endif %}
+
+          <div class="collapse navbar-collapse text-left" id="navbarNav">
+            <ul class="navbar-nav flex-nowrap">
 
               {%- for page in site.pages -%}
                 {% if page.permalink == '/' %}
@@ -39,16 +47,6 @@
                   {%- endif -%}
                 </a>
               </li>
-              {% if site.blog_nav_title %}
-              <!-- Blog -->
-              <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
-                  {%- if page.url contains 'blog' -%}
-                  <span class="sr-only">(current)</span>
-                  {%- endif -%}
-                </a>
-              </li>
-              {%- endif %}
 
               <!-- Other pages -->
               {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
@@ -61,7 +59,7 @@
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdown">
                   {%- for child in p.children -%}
                   {%- if child.title == 'divider' %}
                   <div class="dropdown-divider"></div>
@@ -82,8 +80,20 @@
               {%- endif -%}
               {%- endif -%}
               {% endfor -%}
-              {%- if site.enable_darkmode %}
 
+              <!-- Blog -->
+              {% if site.blog_nav_title %}
+              <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
+                <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
+                  {%- if page.url contains 'blog' -%}
+                  <span class="sr-only">(current)</span>
+                  {%- endif -%}
+                </a>
+              </li>
+              {%- endif %}
+
+
+              {%- if site.enable_darkmode %}
               <!-- Toogle theme mode -->
               <div class = "toggle-container">
                 <a id = "light-toggle">
