--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,13 +37,9 @@ body.sticky-bottom-footer {
 
 // Profile
 .profile {
-  img {
-    width: 100%;
-    border-radius: 100%;
-    margin: 0;
-  }
-
   figure {
+    text-align: center;
+    vertical-align: center;
     margin: 0 0 0rem;
   }
 }
@@ -51,12 +47,13 @@ body.sticky-bottom-footer {
 // TODO: redefine content layout.
 
 .rounded {
-    border-radius: 0.8em!important;
+    border-radius: 0.618em!important;
 }
 
 b, strong {
     font-weight: bolder;
 }
+
 
 /******************************************************************************
  * Publications
