--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -34,5 +34,5 @@ $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light:     rgba($purple-color, 0.05);
+$code-bg-color-light:     rgba(221,244,255,0.618);
 $code-bg-color-dark:      #2c3237 !default;
