--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,6 +6,7 @@
   {%- else -%}
     <a href="{{ project.url | relative_url }}">
   {%- endif %}
+      <div class="card-container">
         <div class="card hoverable">
           {%- if project.img %}
             {%- include figure.html
@@ -17,5 +18,7 @@
             <p class="card-text">{{ project.description }}</p>
           </div>
         </div>
+      </div>
+
     </a>
 </div>
