--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,14 +10,19 @@
     {%- else -%}
     <footer class="sticky-bottom mt-5">
       <div class="container">
-        <span style="float:left;">&copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}</span>
-        <span style="float:right;">
-          <a href="https://github.com/zhiyingli97/zhiyingli97.github.io"><i class="fab fa-github"></i> source code</a>
-        </span>
-        {%- if site.impressum_path -%}
-        <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
-        {%- endif -%}
-        <p>. {{ site.footer_text }}</p>
+        <div>
+          <span style="float:left;">&copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}</span>
+          <span style="float:right;">
+            <a href="https://github.com/zhiyingli97/zhiyingli97.github.io"><i class="fab fa-github"></i> source code</a>
+          </span>
+          {%- if site.impressum_path -%}
+          <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
+          {%- endif -%}
+          <p>. {{ site.footer_text }} </p>
+        </div>
+        <div>
+          <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=XQbXow5TA5snYaaof-Zf-HR6c9jbfLlFXFKB1Runios"></script>
+        </div>
       </div>
     </footer>
     {%- endif %}
